charts/corteza-all-in-one/tests/ingress/00-ingress-controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corteza-nginx-ingress-controller
  namespace: corteza-test
status:
  availableReplicas: 1
