charts/corteza-all-in-one/tests/ingress/01-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corteza-server
  namespace: corteza-test
spec:
  ingressClassName: nginx
  rules:
  - host: chart-example.local
    http:
      paths:
      - backend:
          service:
            name: corteza-server
            port:
              number: 80
        pathType: ImplementationSpecific
        path: /
